[package]
name = "prefix-sum-example"
version = "0.1.0"
description = "A collection of Empa GPGPU kernel primitives for device level parallel operations."
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
arwa = { version = "0.1.0", path = "../../../../rudo/arwa" }
empa = { version = "0.1.0", path = "../../../../glitz/empa", features = ["arwa"] }
empa-tk = { version = "0.1.0", path = "../../../empa-tk" }
futures = "0.3.21"
wasm-bindgen = "0.2.81"
