[package]
name = "radix-sort-by-example"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
arwa = { version = "0.1.0", path = "../../../../rudo/arwa" }
bytemuck = { version = "1.14.0", features = ["derive"] }
empa = { version = "0.1.0", path = "../../../../glitz/empa", features = ["arwa", "bytemuck"] }
empa-tk = { version = "0.1.0", path = "../../../empa-tk" }
futures = "0.3.21"
oorandom = "11.1.3"
permutation = "0.4.1"
wasm-bindgen = "0.2.81"
console_error_panic_hook = "0.1.7"